--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "server": "node server/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "cors": "^2.8.5",
-    "react-router-dom": "^6.15.0",
-    "jwt-decode": "^3.1.2",
+    "react-router-dom": "^6.28.2",
     "react-toastify": "^9.1.3",
-    "axios": "^1.4.0",
-    "jsonwebtoken": "^9.0.1",
-    "multer": "^1.4.5-lts.1",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.3.1"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
