--- a/server/package.json
+++ b/server/package.json
@@ -2,15 +2,16 @@
   "name": "market-data-admin-server",
   "version": "1.0.0",
   "description": "Backend server for Market Data Admin Panel",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
     "winston": "^3.10.0"
   },
